feat(app-data-service): storing chat rooms in the db
storing the chat rooms in the db
