# api-gateway/src/server.ts
@@ -26,6 +26,7 @@ import hiddenRouter from "./routes/hidden.routes";
 import calendarEventRouter from "./routes/calendarEvent.routes";
 import { authorizationErrorMiddleware, errorHandlerMiddleware, notFoundMiddleware } from "./middleware/errorMiddleware";
 import reportsRouter from "./routes/reports.routes";
+import chatsRouter from "./routes/chat.routes";
 
 const corsOptions: CorsOptions = {
   origin: (_, cb) => cb(null, true),
@@ -90,6 +91,7 @@ function startServer(port: number) {
   app.use("/Api/Tasks", tasksRouter);
   app.use("/Api/CalendarEvent", calendarEventRouter);
   app.use("/Api/Reports", reportsRouter);
+  app.use("/Api/Chats", chatsRouter);
 
   app.use(authorizationErrorMiddleware);
   app.use(notFoundMiddleware);
